--- a/css/main.css
+++ b/css/main.css
@@ -17,17 +17,8 @@ nav {
 	position: relative;
 	height: 10%;
 	padding: 1em;
-}
-
-nav ul li {
+	text-align: center;
 	text-transform: uppercase;
-	font-weight: 700;
-	font-size: 1.2em;
-	display: inline;
-}
-
-nav ul li:first-child {
-	float: right;
 }
 
 nav a {
@@ -46,4 +37,34 @@ nav a {
 	-moz-border-radius: 4px;
 	border-radius: 4px;
 	margin: 0 auto;
+}
+
+.Answers {
+	position: relative;
+	background-color: #394264;
+	width: 480px;
+	height: 220px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	margin: 0 auto;
+
+}
+
+.buttonClass {
+	position: relative;
+	margin: 0 auto;
+}
+
+.btn {
+	background: #1F253D;
+	color: #95a5a6;
+	padding: 0.2em;
+	
+}
+
+.btn:hover {
+	background: #e64c65;
+	color: #fff;
+	cursor: pointer;
 }
